# JuniorSeniorSupport

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .test.env  Dockerfile  Makefile  Pipfile  README.MD  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ython.py
.github/workflows/: ci.yml  tests.yml
alembic/: env.py
alembic/versions/: 187272200791_initial.py  2014cc513870_initial.py  7edd25f598f2_initial.py
backend/: alembic.ini
backend/app/: config.py  database.py  main.py  repository.py
backend/app/crud/: __init__.py  issue_crud.py  user_crud.py
backend/app/enums/: role.py  status.py
backend/app/models/: __init__.py  issues.py  issues_models.py  users_model.py  users_models.py
backend/app/routers/: __init__.py  issues_router.py  users_router.py
backend/app/schemas/: __init__.py  issues_schema.py  users_schema.py
backend/migrations/: env.py
backend/migrations/versions/: 285db968046b_create_table_users_and_issues.py  4d9cba7ec22c_initial_migration.py  5ec4e5882243_update_foreign_keys.py  cac09d5bdd20_update_foreign_keys.py
scripts/: start.sh
src/: config.py  database.py  main.py
src/ai/: router.py  service.py
src/auth/: dependencies.py  permissions.py  router.py  security.py  service.py
src/issues/: dependencies.py  enums.py  models.py  router.py  schemas.py  service.py
src/mailing/: celery_app.py  config.py  schemas.py  service.py  tasks.py
src/models/: __init__.py
src/shared/: cache.py  permissions.py  ratelimit.py  security.py
src/users/: dependencies.py  enums.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_issues_api.py  test_users_api.py
tests/unit/: test_issues_service.py
